--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "h-farm/laravel-excludable",
-    "description": "laravel-excludable",
+    "description": "Laravel Excludable",
     "keywords": [
         "h-farm",
         "laravel-excludable"
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "illuminate/database": "^8.0",
+        "illuminate/support": "^8.0",
         "spatie/laravel-package-tools": "^1.4.3"
     },
     "require-dev": {
