Corrected authr email

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "Enrico De Lazzari",
-            "email": "enrico.delazzari@info@maize.io",
+            "email": "enrico.delazzari@maize.io",
             "role": "Developer"
         }
     ],
