--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "spatie/laravel-package-tools": "^1.14.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.4",
+        "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "orchestra/testbench": "^7.0|^8.0",
         "phpunit/phpunit": "^9.5",
@@ -40,7 +40,7 @@
         }
     },
     "scripts": {
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "format": "vendor/bin/pint",
         "psalm": "vendor/bin/psalm",
         "test": "vendor/bin/phpunit --colors=always",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
