--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,8 +19,7 @@ jobs:
         include:
           - laravel: 11.*
             testbench: 9.*
-            carbon:
-              ^3.0
+            carbon: ^3.0
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.63
